--- a/Style.css
+++ b/Style.css
@@ -12,10 +12,10 @@ body{
     font-family: 'Lato' Arial, sans-serif;
     color: #333;
     background-image: url('IMG/FONDO.jpg');
-        background-size: cover;      
-        background-repeat: no-repeat;
-        background-position: center;
-     padding: 20px;
+    background-size: cover;      
+    background-repeat: no-repeat;
+    background-position: center;
+    padding: 20px;
 }
 
 .icon-cart{
@@ -32,8 +32,6 @@ body{
 img{
     max-width: 100%;
 }
-
-/*header*/
 
 header{
     display: flex;
@@ -78,6 +76,7 @@ header{
     z-index: 1;
     box-shadow: 0 10px 20px rgba(0, 0, 0, 0.20);
     border-radius: 10px;
+
 }
 
 .cart-product{
@@ -87,7 +86,6 @@ header{
     padding: 30px;
 
     border-bottom: 1px solid rgba(0, 0, 0, 0.20);
-
 
 }
 
@@ -151,13 +149,8 @@ header{
     display: none;
 }
 
-
-
-/*Main*/
 .container-items{
-
     color: black;
-    
 
 }
 
@@ -167,15 +160,16 @@ header{
 
 }
 
-
 .item:hover{
     box-shadow: 0 10px 20px rgba(255, 254, 254, 0.7);
+
 }
 
 .info-product{
     padding: 15px 10px;
     background-color: rgb(206, 96, 18);
     color: #fff;
+
 }
 
 .item img{
@@ -184,27 +178,32 @@ header{
     object-fit: cover;
     border-radius: 5px 10px 0 0;
     transition: all .5s;
+
 }
 
 .item figure{
     overflow: hidden;
+
 }
 
 .item:hover img{
     transform: scale(1.2);
+
 }
 
 .info-product{
-    padding: 15px 30 px;
+    padding: 15px 30;
     line-height: 2;
     display: flex;
     flex-direction: column;
     gap: 10px;
+
 }
 
 .price{
     font-size: 18px;
     font-weight: 900;
+
 }
 
 .info-product button{
@@ -221,9 +220,8 @@ footer {
     background-color: #333;
     color: #fff;
     padding: 10px 20px;
-
-    bottom: 0;
-    width: 100%;
+    bottom: 10px;
+    width: 10px;
 }
 
 .row-container{
@@ -244,7 +242,6 @@ footer {
     border-radius: 76px;
   }
 
-
 .botonComprar{
     background-color:#ec672a;
     padding: 10px 20px;
@@ -257,7 +254,9 @@ nav{
     background-color: #333;
     font-size: 20px;
     margin-top: 50px;
+
 }
+
 .menu-horizontal{
     list-style: none;
     display: flex;
@@ -267,7 +266,9 @@ nav{
 
 .menu-horizontal >li:hover{
     background-color: #ff6600;
+
 }
+
 .menu-vertical{
     position: absolute;
     display: none;
@@ -275,24 +276,31 @@ nav{
     width: 200px;
     z-index: 9;
     background-color: #ff6600;
+
 }
+
 .menu-vertical > li > a {
     display: block;
     padding: 15px 20px;
     color: white;
     text-decoration: none;
 }
+
 .menu-horizontal li:hover .menu-vertical{
     display: block;
+
 }
 
 .mauseover:hover .menu-vertical {
     display: block;
+
 }
 
 .menu-vertical li:hover{
-    background-color: black;    
+    background-color: black;  
+
 }
+
 .menu-vertical li a{
     display: block;
     color: white;
